NIFI-12557 Updated nifi-kafka-bundle using current API methods
- Removed unused methods and fields

This closes #8196

Signed-off-by: David Handermann <exceptionfactory@apache.org>